Optimised Dockerfile